--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -6,7 +6,12 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
+    <h1>Tuned City Archive: <%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <ul>
+    <% for(var i=0; i<medias.length; i++) { %>
+       <li><%= medias[i] %></li>
+    <% } %>
+    </ul>
   </body>
 </html>
