--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -6,14 +6,18 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     
     <script src="/javascripts/jquery-1.9.1.min.js"></script>
-    <script src="/javascripts/jquery.jplayer.min.js"></script>
+    <script src="/javascripts/jquery.jplayer.js"></script>
+    
     <script src="/javascripts/MediaPlayer.js"></script>
     <script src="/javascripts/Path.js"></script>
+    <script src="/javascripts/Shelf.js"></script>
+    
     <script src="/javascripts/index.js"></script>
     
   </head>
   <body>
     <h1>Tuned City Archive: <%= title %></h1>
     <div id="tc_wrapper" />
+    <div id="audio" />
   </body>
 </html>
