--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -4,6 +4,7 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/reset.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/jquery.jcursor.css' />
     
     <script src="/javascripts/jquery-1.9.1.min.js"></script>
     <script src="/javascripts/jquery.jplayer.js"></script>
