--- a/app/public/stylesheets/style.less
+++ b/app/public/stylesheets/style.less
@@ -1,6 +1,18 @@
+@font-face {
+    font-family: 'osp-din';
+    src: url('fonts/osp-din-webfont.eot');
+    src: url('fonts/osp-din-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/osp-din-webfont.woff') format('woff'),
+         url('fonts/osp-din-webfont.ttf') format('truetype'),
+         url('fonts/osp-din-webfont.svg#osp-dindin') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px "osp-din", Helvetica, Arial, sans-serif;
 }
 
 a {
