--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -5,8 +5,16 @@
     <link rel='stylesheet' href='/stylesheets/reset.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/jquery.jcursor.css' />
+    <link rel='stylesheet' href='/stylesheets/ui-lightness/jquery-ui-1.10.2.custom.css' />
     
+  </head>
+  <body>
+    <h1>Tuned City Archive: <%= title %></h1>
+    <div id="tc_wrapper" />
+    <div id="audio" />
+
     <script src="/javascripts/jquery-1.9.1.min.js"></script>
+    <script src="/javascripts/jquery-ui-1.10.2.custom.min.js"></script>
     <script src="/javascripts/jquery.jplayer.js"></script>
     
     <script src="/javascripts/MediaPlayer.js"></script>
@@ -14,11 +22,5 @@
     <script src="/javascripts/Shelf.js"></script>
     
     <script src="/javascripts/index.js"></script>
-    
-  </head>
-  <body>
-    <h1>Tuned City Archive: <%= title %></h1>
-    <div id="tc_wrapper" />
-    <div id="audio" />
   </body>
 </html>
