--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -15,7 +15,7 @@
 
     <script src="/javascripts/jquery-1.9.1.min.js"></script>
     <script src="/javascripts/jquery-ui-1.10.2.custom.min.js"></script>
-    <script src="/javascripts/jquery.jplayer.js"></script>
+    <script src="/javascripts/jquery.jplayer.min.js"></script>
     
     <script src="/javascripts/MediaPlayer.js"></script>
     <script src="/javascripts/Path.js"></script>
