--- a/app/public/stylesheets/style.less
+++ b/app/public/stylesheets/style.less
@@ -18,3 +18,49 @@ body {
 a {
   color: #00B7FF;
 }
+
+
+@shelfHeight:56px;
+
+.shelf-top-box{
+    position:absolute;
+    bottom:0;
+    left:0;
+    height:@shelfHeight;
+    width:100%;
+    border-top:1px solid gray;
+    
+    .shelf-box{
+        position:absolute;
+        left:122px;
+        right:122px;
+        height:@shelfHeight;
+        overflow:auto;
+        background-color:#eee;
+    }
+    
+    .shelf-menu-box{
+        position:absolute;
+        height:@shelfHeight;
+        width:122px;
+        bottom:0;
+        left:0;
+        overflow:auto;
+        border-right:1px solid gray;
+        .shelf-menu-item{
+            cursor:pointer;
+            &:hover{
+                color:gray;
+            }
+        }
+    }
+    .shelf-create-box{
+        position:absolute;
+        bottom:0;
+        right:0;
+        height:@shelfHeight;
+        width:122px;
+        border-left:1px solid gray;
+    }
+    
+}
