A more sophisticated app object

--- a/app/public/stylesheets/style.less
+++ b/app/public/stylesheets/style.less
@@ -20,7 +20,7 @@ a {
 }
 
 
-@shelfHeight:56px;
+@shelfHeight:122px;
 
 .shelf-top-box{
     position:absolute;
@@ -51,6 +51,10 @@ a {
             cursor:pointer;
             &:hover{
                 color:gray;
+            }
+            &.selected{
+                background-color:black;
+                color:white;
             }
         }
     }
