--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -21,6 +21,8 @@
     <script src="/javascripts/Path.js"></script>
     <script src="/javascripts/Shelf.js"></script>
     
+    <script src="/javascripts/app.js"></script>
     <script src="/javascripts/index.js"></script>
+    
   </body>
 </html>
