--- a/app/public/stylesheets/style.less
+++ b/app/public/stylesheets/style.less
@@ -19,6 +19,14 @@ a {
   color: #00B7FF;
 }
 
+button {
+    border: none;
+    padding: 0;
+    margin: 0;
+    background-color: transparent;
+    font: 14px "osp-din", Helvetica, Arial, sans-serif;
+}
+
 
 @shelfHeight:56px;
 
