More on the form front

--- a/app/public/stylesheets/style.less
+++ b/app/public/stylesheets/style.less
@@ -45,6 +45,10 @@ button {
         height:@shelfHeight;
         overflow:auto;
         background-color:#eee;
+        
+        .shelf-title-box{
+            display:none;
+        }
     }
     
     .shelf-menu-box{
