--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -15,12 +15,15 @@
 
     <script src="/javascripts/jquery-1.9.1.min.js"></script>
     <script src="/javascripts/jquery-ui-1.10.2.custom.min.js"></script>
-    <script src="/javascripts/underscore-min.js"></script>
     <script src="/javascripts/jquery.jplayer.min.js"></script>
+    <script src="/javascripts/jquery.dform-1.0.1.min.js"></script>
+    <script src="/javascripts/jquery.form.js"></script>
+    <script src="/javascripts/underscore-min.js"></script>
     
     <script src="/javascripts/MediaPlayer.js"></script>
     <script src="/javascripts/Path.js"></script>
     <script src="/javascripts/Shelf.js"></script>
+    <script src="/javascripts/Form.js"></script>
     
     <script src="/javascripts/app.js"></script>
     <script src="/javascripts/index.js"></script>
