--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -24,6 +24,7 @@
     <script src="/javascripts/Path.js"></script>
     <script src="/javascripts/Shelf.js"></script>
     <script src="/javascripts/Form.js"></script>
+    <script src="/javascripts/Resolver.js"></script>
     
     <script src="/javascripts/app.js"></script>
     <script src="/javascripts/index.js"></script>
