A few stylistic changes

--- a/app/public/stylesheets/style.less
+++ b/app/public/stylesheets/style.less
@@ -11,12 +11,20 @@
 }
 
 body {
-  padding: 50px;
+  padding: 10px;
   font: 14px "osp-din", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+h1 {
+    font-size: 2em;
+}
+
+#audio {
+    display: inline-block;
 }
 
 button {
@@ -25,6 +33,12 @@ button {
     margin: 0;
     background-color: transparent;
     font: 14px "osp-din", Helvetica, Arial, sans-serif;
+
+    border: 1px solid black;
+    height: 50px;
+    width: 50px;
+    -moz-border-radius: 25px;
+    border-radius: 25px;
 }
 
 
