--- a/app/public/stylesheets/jquery.jcursor.less
+++ b/app/public/stylesheets/jquery.jcursor.less
@@ -3,6 +3,7 @@
 }
 
 .spectrogram {
+    display: inline-block;
     position: relative;
     width: 600px;
     height: 60px;
@@ -25,7 +26,7 @@
     position: absolute;
     height: 50px;
     width: 1px;
-    background-color: blue;
+    background-color: rgb(122, 151, 170);
     display: none;
 }
 
@@ -41,7 +42,7 @@
     top: 0;
     height: 0px;
     width: 0px;
-    background-color: blue;
+    background-color: rgb(122, 151, 170);
     -webkit-transition-property: height, width;
     -webkit-transition-duration: 0.2s;
 }
@@ -51,8 +52,8 @@
     top: 0;
     height: 10px;
     width: 10px;
-    background-color: yellow;
-    outline: 1px solid black;
+    background-color: gold;
+    outline: 1px solid white;
 }
 
 .comment-cursor-persistant:hover {
