--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -6,16 +6,29 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/jquery.jcursor.css' />
     <link rel='stylesheet' href='/stylesheets/ui-lightness/jquery-ui-1.10.2.custom.css' />
+    <link rel='stylesheet' href='/stylesheets/layout-default-latest.css' />
+    <link href='http://fonts.googleapis.com/css?family=Chivo:400,400italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Carrois+Gothic' rel='stylesheet' type='text/css'>
+
+
     
   </head>
   <body>
-    <h1>Tuned City Archive: <%= title %></h1>
-    <h2></h2>
-    <div id="tc_wrapper" />
-    <div id="audio" />
+      <div class="ui-layout-center">
+        <h1>Tuned City Archive: <%= title %></h1>
+        <h2>yo</h2>
+        <div class="time">yo</div>
+        <div id="tc_wrapper"></div>
+        <div id="audio"></div>
+      </div>
+      <div class="ui-layout-east">
+      <h3>Shelves</h3>
+      </div>
+
 
     <script src="/javascripts/jquery-1.9.1.min.js"></script>
     <script src="/javascripts/jquery-ui-1.10.2.custom.min.js"></script>
+    <script src="/javascripts/jquery.layout-latest.min.js"></script>
     <script src="/javascripts/jquery.jplayer.min.js"></script>
     <script src="/javascripts/jquery.dform-1.0.1.min.js"></script>
     <script src="/javascripts/underscore-min.js"></script>
@@ -28,6 +41,5 @@
     
     <script src="/javascripts/app.js"></script>
     <script src="/javascripts/index.js"></script>
-    
   </body>
 </html>
