Jquery UI diet...
Why not using all the visual attributes at the same time? After all they
comes for free!

--- a/app/public/stylesheets/style.less
+++ b/app/public/stylesheets/style.less
@@ -89,3 +89,11 @@ button {
 .previous {
     margin-right: 18px;
 }
+textarea {
+    width: 100%;
+    outline: 1px solid lightgray;
+    border: none;
+    padding: none;
+    margin: none;
+    min-height: 300px;
+}
