Tyding MediaPlayer, externalising timecode prototypes

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -32,6 +32,7 @@
     <script src="/javascripts/jquery.dform-1.0.1.min.js"></script>
     <script src="/javascripts/underscore-min.js"></script>
     
+    <script src="/javascripts/timecode.js"></script>
     <script src="/javascripts/MediaPlayer.js"></script>
     <script src="/javascripts/Path.js"></script>
     <script src="/javascripts/Shelf.js"></script>
