--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -4,6 +4,7 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/reset.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/javascripts/mediaelement/mediaelementplayer.min.css' />
     <link rel='stylesheet' href='/stylesheets/jquery.jcursor.css' />
     <link rel='stylesheet' href='/stylesheets/ui-lightness/jquery-ui-1.10.2.custom.css' />
     <link rel='stylesheet' href='/stylesheets/layout-default-latest.css' />
@@ -19,6 +20,9 @@
         <div class="time">yo</div>
         <div id="tc_wrapper"></div>
         <div id="audio"></div>
+
+        <!-- a source needs to be set for mediaelementjs to be happy -->
+        <video id="mediaelement-player" src="placeholder.ogg"></video>
       </div>
       <div class="ui-layout-east">
       <h3>Shelves</h3>
@@ -28,7 +32,7 @@
     <script src="/javascripts/jquery-1.9.1.min.js"></script>
     <script src="/javascripts/jquery-ui-1.10.2.custom.min.js"></script>
     <script src="/javascripts/jquery.layout-latest.min.js"></script>
-    <script src="/javascripts/jquery.jplayer.min.js"></script>
+    <script src="/javascripts/mediaelement/mediaelement-and-player.min.js"></script>
     <script src="/javascripts/jquery.dform-1.0.1.min.js"></script>
     <script src="/javascripts/underscore-min.js"></script>
     
