--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title><%= title %></title>
+    
+    <link rel='stylesheet' href='/stylesheets/reset.css' />
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    
     <script src="/js/lib/underscore-min.js"></script>
     <script src="/js/lib/jquery.js"></script>
     <script src="/js/lib/backbone.js"></script>
@@ -10,6 +14,8 @@
     <script src="/js/collections.js"></script>
     <script src="/js/views.js"></script>
     <script src="/js/app.js"></script>
+    
+    <script src="/js/index.js"></script>
     <body>
   </body>
 </html>
