--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -6,15 +6,18 @@
     <link rel='stylesheet' href='/stylesheets/reset.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
     
+    <script src="/js/lib/underscore-min.js"></script>
+    <script src="/js/lib/jquery.js"></script>
+    <script src="/js/lib/backbone.js"></script>
+    
+    <script src="/javascripts/mediaelement/mediaelement-and-player.min.js"></script>
+    <script src="/javascripts/timecode.js"></script>
+    
     <link rel='stylesheet' href='/javascripts/mediaelement/mediaelementplayer.min.css' />
     <link rel='stylesheet' href='/stylesheets/jquery.jcursor.css' />
     
     <link rel='stylesheet' href='/stylesheets/ui-lightness/jquery-ui-1.10.2.custom.css' />
     <link href='http://fonts.googleapis.com/css?family=Carrois+Gothic' rel='stylesheet' type='text/css'>
-    
-    <script src="/js/lib/underscore-min.js"></script>
-    <script src="/js/lib/jquery.js"></script>
-    <script src="/js/lib/backbone.js"></script>
     
     <script src="/javascripts/MediaPlayer.js"></script>
     
@@ -28,6 +31,6 @@
   </head>
   <body>
 <!--         [> a source needs to be set for mediaelementjs to be happy <] -->
-        <video id="mediaelement-player" src="#"></video>
+        <video id="mediaelement-player" src="video.ogg"></video>
   </body>
 </html>
