First attemps to get more visual shelves.
The images are cascading. It needs more css to function properly.

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -27,6 +27,7 @@
     <script src="/js/app.js"></script>
     
     <script src="/js/index.js"></script>
+    <script src="/js/lib/jquery.dynamic-img.js"></script>
     <body>
   </head>
   <body>
