Even cleaner access to populated attributes Made it possible to delay rendering in such a fashion that we got a chance to let the app finish to load before we actually start it.

--- a/app/public/js/templates/Shelf.html
+++ b/app/public/js/templates/Shelf.html
@@ -5,8 +5,8 @@
     <div class="shelf-items">
     <% for(var i=0; i < bookmarks.length; i++){ var b = bookmarks[i];%>
         <div class="Bookmark" id="Bookmark_<%= b._id %>">
-            <!--<%- b.note %>-->
-            <a rel="embed" href="/poster/<%- b.cursor.media %>">id</a>
+        <div class="BookmarkPlay" id="BookmarkPlay_<%= b._id %>"><%- b.note %></div>
+<!--             <a rel="embed" href="/poster/<%- b.cursor.media %>"><%- b._id %></a> -->
         </div>
     <% } %>
     </div>
