--- a/app/public/stylesheets/style.less
+++ b/app/public/stylesheets/style.less
@@ -100,3 +100,22 @@ button {
         right:4px;
     }
 }
+
+
+.ConnectionWidget{
+    .new_conn{
+        td{
+            vertical-align: top;
+        }
+        div{
+            margin:3px;
+        }
+        .in,.out,textarea.annotation{
+            width:300px;
+            height:80px;
+            border:1px solid @color2;
+            min-height: 0;
+            display: block;
+        }
+    }
+}
