--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -10,6 +10,9 @@
     <script src="/js/lib/jquery.js"></script>
     <script src="/js/lib/backbone.js"></script>
     
+    <script src="/javascripts/jquery.dform-1.0.1.min.js"></script>
+    <script src="/javascripts/jquery-ui-1.10.2.custom.min.js"></script>
+    
     <script src="/javascripts/mediaelement/mediaelement-and-player.min.js"></script>
     <script src="/javascripts/timecode.js"></script>
     
@@ -20,14 +23,17 @@
     <link href='http://fonts.googleapis.com/css?family=Carrois+Gothic' rel='stylesheet' type='text/css'>
     
     <script src="/javascripts/MediaPlayer.js"></script>
+    <script src="/javascripts/Form.js"></script>
+    <script src="/javascripts/ConnectionWidget.js"></script>
     
     <script src="/js/models.js"></script>
     <script src="/js/collections.js"></script>
     <script src="/js/views.js"></script>
     <script src="/js/app.js"></script>
     
-    <script src="/js/index.js"></script>
     <script src="/js/lib/jquery.dynamic-img.js"></script>
+    
+    <script src="/js/index.js"></script>
     <body>
   </head>
   <body>
