--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -31,7 +31,8 @@
     <body>
   </head>
   <body>
+      <h2>You are currently watching</h2>
 <!--         [> a source needs to be set for mediaelementjs to be happy <] -->
-        <video id="mediaelement-player" src="video.ogg"></video>
+        <video id="mediaelement-player" src="video.ogg" width="320" height="240"></video>
   </body>
 </html>
