Rough layout of the shelves

--- a/app/public/js/templates/Shelf.html
+++ b/app/public/js/templates/Shelf.html
@@ -1,12 +1,14 @@
 
     <div class="shelf-title-box">
-        <div class="shelf-title"><%- title %></div>
+        <div class="shelf-title"><%- title %> <span class="count"><%= bookmarks.length %></span></div>
     </div>
     <div class="shelf-items">
     <% for(var i=0; i < bookmarks.length; i++){ var b = bookmarks[i];%>
         <div class="Bookmark" id="Bookmark_<%= b._id %>">
-        <div class="BookmarkPlay" id="BookmarkPlay_<%= b._id %>"><%- b.note %></div>
-            <!--<a rel="embed" href="/poster/<%- b.cursor.media._id %>"><%- b._id %></a>-->
+            <div class="BookmarkPlay" id="BookmarkPlay_<%= b._id %>">
+                <span class="bookmark-title"><%- b.note %></span>
+                <a rel="embed" href="/poster/<%- b.cursor.media._id %>"><%- b._id %></a>
+            </div>
         </div>
     <% } %>
     </div>
