--- a/app/public/js/templates/ShelfCollection.html
+++ b/app/public/js/templates/ShelfCollection.html
@@ -1,3 +1,4 @@
+<h2>Shelves</h2>
 <div class="shelf-create-box">
     <input type="text" class="shelf-create-input">
     <button class="shelf-create-submit">create</button>
