Put back collpasing in the shelves

--- a/app/public/stylesheets/style.less
+++ b/app/public/stylesheets/style.less
@@ -120,7 +120,7 @@ textarea {
         margin-bottom: @line-height;
     }
     .Shelf .shelf-items {
-        /*display: none;*/
+        display: none;
     }
     .Shelf .shelf-title:before {
         content: "\2192";
