--- a/app/public/stylesheets/style.less
+++ b/app/public/stylesheets/style.less
@@ -67,10 +67,10 @@ textarea {
 .ShelfCollection{
     position: fixed;
     left: 0;
-    top: 0;
-    bottom: 0;
+    top: 12px;
+    bottom: 12px;
     overflow: auto;
-    width: 200px;
+    width: 220px;
     background-color: lightgrey;
     padding: @line-height;
 
