On the way to a full backbonization, a kind of a backup

--- a/app/public/js/templates/ConnectionWidget.html
+++ b/app/public/js/templates/ConnectionWidget.html
@@ -1,5 +1,5 @@
-Path title: <input class='title' val="<%- title %>" type="text" />
-<%for(var i=0; i < connections.length; i++){ var conn = connections[i]; %>
+Path title: <input class='title' val="<%- data.title %>" type="text" />
+<%for(var i=0; i < data.connections.length; i++){ var conn = data.connections[i]; %>
 <div class="conn">
 <table>
 <tr>
