--- a/app/public/js/templates/Bookmark.html
+++ b/app/public/js/templates/Bookmark.html
@@ -1,3 +1,3 @@
-<div class="bookmark" id="id_<%= _id %>">
-    <%- note %>
+<div class="bookmark" id="id_<%= data._id %>">
+    <%- data.note %>
 </div>
