--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -9,6 +9,7 @@
     <script src="/js/lib/underscore-min.js"></script>
     <script src="/js/lib/jquery.js"></script>
     <script src="/js/lib/backbone.js"></script>
+    <script src="/js/lib/template.js"></script>
     
     <script src="/javascripts/jquery.dform-1.0.1.min.js"></script>
     <script src="/javascripts/jquery-ui-1.10.2.custom.min.js"></script>
@@ -29,16 +30,13 @@
     <script src="/js/models.js"></script>
     <script src="/js/collections.js"></script>
     <script src="/js/views.js"></script>
+    <script src="/js/routers.js"></script>
     <script src="/js/app.js"></script>
-    
     <script src="/js/lib/jquery.dynamic-img.js"></script>
-    
     <script src="/js/index.js"></script>
+    
     <body>
   </head>
   <body>
-      <h2>You are currently watching</h2>
-<!--         [> a source needs to be set for mediaelementjs to be happy <] -->
-        <video id="mediaelement-player" src="video.ogg" width="320" height="240"></video>
   </body>
 </html>
