Got the UI refresh right

--- a/app/public/js/templates/Shelf.html
+++ b/app/public/js/templates/Shelf.html
@@ -4,10 +4,14 @@
     </div>
     <div class="shelf-items">
     <% for(var i=0; i < data.bookmarks.length; i++){ var b = data.bookmarks[i];%>
+        <div class="BookmarkDelete" id="BookmarkDelete_<%= b._id %>">&times; </div>
         <div class="Bookmark" id="Bookmark_<%= b._id %>">
+            
             <div class="BookmarkPlay" id="BookmarkPlay_<%= b._id %>">
                 <span class="bookmark-title"><%- b.note %></span>
+                <% if(b.cursor && b.cursor.media){ %>
                 <a rel="embed" href="/poster/<%- b.cursor.media._id %>"><%- b._id %></a>
+                <% } %>
             </div>
         </div>
     <% } %>
