--- a/app/public/js/templates/UploadMedia.html
+++ b/app/public/js/templates/UploadMedia.html
@@ -1,3 +1,8 @@
+<select name="shelf">
+<% for(var i = 0; i < data.shelves.length; i++){ var s=data.shelves[i]; %>
+<option value="<%= s._id %>"><%- s.title %></option>
+<% } %>
+</select>
 <input type="file" name="media" />
 <button class="close">close</button>
 <button class="submit">submit</button>
