Back to the point we were at! Means we can upload medias, and, yes, play them!

--- a/app/public/js/templates/Player.html
+++ b/app/public/js/templates/Player.html
@@ -1,6 +1,6 @@
 <!-- media player -->
 <% if(data.url !== ''){ %>
-<h2>Currently watching: <br /> <%- node.url %></h2>
+<h2>Currently watching: <br /> <%- data.url %></h2>
 <% } %>
 <div>
 <button class="previous"><%= data.previous %></button>
