--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -14,7 +14,7 @@
     <script src="/javascripts/jquery.dform-1.0.1.min.js"></script>
     <script src="/javascripts/jquery-ui-1.10.2.custom.min.js"></script>
     
-    <script src="/javascripts/mediaelement/mediaelement-and-player.min.js"></script>
+    <script src="/javascripts/mediaelement/mediaelement-and-player.js"></script>
     <script src="/javascripts/timecode.js"></script>
     
     <link rel='stylesheet' href='/javascripts/mediaelement/mediaelementplayer.min.css' />
@@ -23,8 +23,8 @@
     <link rel='stylesheet' href='/stylesheets/ui-lightness/jquery-ui-1.10.2.custom.css' />
     <link href='http://fonts.googleapis.com/css?family=Carrois+Gothic' rel='stylesheet' type='text/css'>
     
-    <script src="/javascripts/MediaPlayer.js"></script>
-    <script src="/javascripts/Form.js"></script>
+<!--     <script src="/javascripts/MediaPlayer.js"></script> -->
+<!--     <script src="/javascripts/Form.js"></script> -->
     <script src="/javascripts/ConnectionWidget.js"></script>
     
     <script src="/js/models.js"></script>
