--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title><%= title %></title>
+       
+    <link rel='stylesheet' href='/stylesheets/jquery.jcursor.css' />
+    <link rel='stylesheet' href='/stylesheets/ui-lightness/jquery-ui-1.10.2.custom.css' />
+    <link href='http://fonts.googleapis.com/css?family=Carrois+Gothic' rel='stylesheet' type='text/css'>
     
     <link rel='stylesheet' href='/stylesheets/reset.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
@@ -11,32 +15,19 @@
     <script src="/js/lib/backbone.js"></script>
     <script src="/js/lib/template.js"></script>
     
-    <script src="/javascripts/jquery.dform-1.0.1.min.js"></script>
     <script src="/javascripts/jquery-ui-1.10.2.custom.min.js"></script>
+    <script src="/js/lib/jquery.dynamic-img.js"></script>
     
-    <script src="/javascripts/mediaelement/mediaelement-and-player.js"></script>
+    <script src="/javascripts/jquery.jplayer.js"></script>
     <script src="/javascripts/timecode.js"></script>
-    
-    <link rel='stylesheet' href='/javascripts/mediaelement/mediaelementplayer.min.css' />
-    <link rel='stylesheet' href='/stylesheets/jquery.jcursor.css' />
-    
-    <link rel='stylesheet' href='/stylesheets/ui-lightness/jquery-ui-1.10.2.custom.css' />
-    <link href='http://fonts.googleapis.com/css?family=Carrois+Gothic' rel='stylesheet' type='text/css'>
-    
-<!--     <script src="/javascripts/MediaPlayer.js"></script> -->
-<!--     <script src="/javascripts/Form.js"></script> -->
-    <script src="/javascripts/ConnectionWidget.js"></script>
     
     <script src="/js/models.js"></script>
     <script src="/js/collections.js"></script>
     <script src="/js/views.js"></script>
     <script src="/js/routers.js"></script>
     <script src="/js/app.js"></script>
-    <script src="/js/lib/jquery.dynamic-img.js"></script>
     <script src="/js/index.js"></script>
     
-    <body>
   </head>
-  <body>
-  </body>
+  <body> </body>
 </html>
