Fixed bookmark would not play because of _id is not id

--- a/app/public/js/templates/Player.html
+++ b/app/public/js/templates/Player.html
@@ -13,7 +13,7 @@
 <span class="play">play</span>
 <span class="pause">pause</span>
 <span class="mute">mute</span>
-<span clas="unmute">unmute</span>
+<span class="unmute">unmute</span>
 <span class="currentTime"></span>
 <span class="duration"></span>
 </div>
