gros up de style admin

--- a/app/public/js/templates/ConnectionWidget.html
+++ b/app/public/js/templates/ConnectionWidget.html
@@ -1,3 +1,7 @@
+<!-- connection widget -->
+
+<div class="boxtitle">Create Connection</div>
+
 Path title: <input class='title' val="<%- data.title %>" type="text" />
 <%for(var i=0; i < data.connections.length; i++){ var conn = data.connections[i]; %>
 <div class="conn">
