gros up de style admin #2

--- a/app/public/js/templates/ConnectionWidgetNewRow.html
+++ b/app/public/js/templates/ConnectionWidgetNewRow.html
@@ -5,7 +5,7 @@
 <td><div class="in drop">In<br>Drop a bookmark here!</div></td>
 <td><div class="out drop">Out<br>Drop a bookmark here!</div></td>
 <td><div><textarea class="annotation" /></div></td>
-<td><span class="del" id="del_nn">Delete</span></td>
+<td><button class="del" id="del_nn">delete row</button></td>
 </tr>
 </table>
 </div>
