--- a/app/public/js/templates/CreateBookmark.html
+++ b/app/public/js/templates/CreateBookmark.html
@@ -1,8 +1,20 @@
-<select name="shelf">
-<% for(var i = 0; i < data.shelves.length; i++){ var s=data.shelves[i]; %>
-<option value="<%= s._id %>"><%- s.title %></option>
-<% } %>
-</select>
-<textarea name="note" ></textarea>
-<button class="close">close</button>
-<button class="submit">submit</button>
+<div class="content">
+    <div class="label">
+        Select a shelf
+    </div>
+    <select name="shelf">
+    <% for(var i = 0; i < data.shelves.length; i++){ var s=data.shelves[i]; %>
+    <option value="<%= s._id %>"><%- s.title %></option>
+    <% } %>
+    </select>
+    
+    <div class="label">
+        Label
+    </div>
+    <input name="note" ></input>
+</div>
+
+<div class="buttons">
+    <button class="close">close</button>
+    <button class="submit">submit</button>
+</div>
