--- a/app/public/js/templates/ConnectionWidget.html
+++ b/app/public/js/templates/ConnectionWidget.html
@@ -1,8 +1,11 @@
 <!-- connection widget -->
 
-<div class="boxtitle">Create Connection</div>
+<div class="boxtitle">Path Composition</div>
 
-Path title: <input class='title' val="<%- data.title %>" type="text" />
+<div class="head">
+    Title: <input class='title' val="<%- data.title %>" type="text" />
+</div>
+
 <%for(var i=0; i < data.connections.length; i++){ var conn = data.connections[i]; %>
 <div class="conn">
 <table>
