--- a/app/public/stylesheets/style.less
+++ b/app/public/stylesheets/style.less
@@ -105,6 +105,7 @@ textarea {
     .shelf-create-box{
         .absPos(0,3px,auto,auto);
         padding:3px;
+        z-index:10000;
     }
     .Shelf{
         
