--- a/app/public/js/templates/PathCollection.html
+++ b/app/public/js/templates/PathCollection.html
@@ -1,3 +1,7 @@
 <h2>Paths</h2>
+<div class="new-path">
+    <input type="text" class="new-path-input">
+    <button class="new-path-submit">new path</button>
+</div>
 
 
